force-app/main/default/objects/TVA_CO__Contacto_Settings__c/TVA_CO__Contacto_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Contacto Settings</label>
</CustomObject>