force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Activate_Bounce_Unsubsribe_Update__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Activate_Bounce_Unsubsribe_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate Bounce Unsubsribe Update</label>
    <type>Checkbox</type>
</CustomField>