force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Activate_Lead_Conversion_trigger__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Activate_Lead_Conversion_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate Lead Conversion trigger</label>
    <type>Checkbox</type>
</CustomField>