force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Activate_schedule_Delete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Activate_schedule_Delete_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Activate delete trigger on scheduled jobs.</description>
    <label>Activate schedule Delete Trigger</label>
    <type>Checkbox</type>
</CustomField>