force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Amazon_Notification_Verification_Email__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Amazon_Notification_Verification_Email__c</fullName>
    <label>Amazon Notification Verification Email</label>
    <type>Email</type>
</CustomField>