force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__AWS_SES_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__AWS_SES_Endpoint_URL__c</fullName>
    <label>AWS SES Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>