force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__AWS_SNS_Subscription_URL__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__AWS_SNS_Subscription_URL__c</fullName>
    <label>AWS SNS Subscription URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>