force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Certificate_Name__c</fullName>
    <label>Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>