force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Click_Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Click_Tracking_URL__c</fullName>
    <label>Click Tracking URL</label>
    <type>Url</type>
</CustomField>