force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Consumer_Key__c</fullName>
    <label>Consumer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>