force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Contacto_Configurationset__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Contacto_Configurationset__c</fullName>
    <label>Contacto Configurationset</label>
    <length>64</length>
    <type>Text</type>
</CustomField>