force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__CustomTemplate_Folder__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__CustomTemplate_Folder__c</fullName>
    <label>CustomTemplate Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>