force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Default_And_Hidden_Fields__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Default_And_Hidden_Fields__c</fullName>
    <label>Default And Hidden Fields</label>
    <type>TextArea</type>
</CustomField>