force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Domain_Url__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Domain_Url__c</fullName>
    <label>Domain Url</label>
    <type>Url</type>
</CustomField>