force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Email_Message_Send_Rate__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Email_Message_Send_Rate__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>Email Message Send Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>