force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Enable_Activity_Attach_Files__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Enable_Activity_Attach_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Activity Attach Files</label>
    <type>Checkbox</type>
</CustomField>