force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Enable_Email_Suppression__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Enable_Email_Suppression__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Email Suppression</label>
    <type>Checkbox</type>
</CustomField>