force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Enable_Upload_CSV__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Enable_Upload_CSV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Upload CSV</label>
    <type>Checkbox</type>
</CustomField>