force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Pardot_Authentication_End_Point__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Pardot_Authentication_End_Point__c</fullName>
    <label>Pardot Authentication End Point</label>
    <type>Url</type>
</CustomField>