force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Send_Rate__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Send_Rate__c</fullName>
    <label>Amazon Send Rate</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>