force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__SendGrid_Email_Validation_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__SendGrid_Email_Validation_Endpoint__c</fullName>
    <label>SendGrid Email Validation Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>