force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__SendGrid_Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__SendGrid_Webhook_URL__c</fullName>
    <label>SendGrid Webhook URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>