force-app/main/default/objects/TVA_CO__Contacto_Settings__c/fields/TVA_CO__Unsubscribe_URL__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Unsubscribe_URL__c</fullName>
    <label>Unsubscribe URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>